# python-rag-agent

./: .env.example  .gitignore  README.md  app.py  config.py  custom_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
eval/: chunk_stats.py  evaluate.py  golden_dataset.json
frontend/: CLAUDE.md  README.md
frontend/app/: page.tsx
frontend/components/: AnswerCard.tsx  ContextDrawer.tsx  FileUploader.tsx  QueryBox.tsx
pages/: 1_eval.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_vector_db.py
